Added new route GET /pokemon_by_name/{pokemonName} which searches for Pokemon by its name. The search is case-insensitive
